--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ body{
     </div>
     <div id ="hero">
         <div style="text-align: center; margin: 30px 0;">
-            <a href="https://discord.gg/dxK5U9b6W7" style="background-color: #f07109; color: white; padding: 15px 30px; text-decoration: none; font-size: 1.5rem; border-radius: 8px; display: inline-block;">Connect with Us on Discord</a>
+            <a href="https://discord.gg/uj8vV4trGH" style="background-color: #f07109; color: white; padding: 15px 30px; text-decoration: none; font-size: 1.5rem; border-radius: 8px; display: inline-block;">Connect with Us on Discord</a>
           </div>
     </div>
     <div id="lower">
