--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ body{
 </style>
 <body>
     <div id="upper">
-        <img src="FTS.png"class="background-image" />
+        <img src="images/FTS.png"class="background-image" />
 
     </div>
     <div id ="hero">
@@ -63,7 +63,7 @@ body{
           </div>
     </div>
     <div id="lower">
-        <img src="CH.png" class="background-image" />
+        <img src="images/CH.png" class="background-image" />
 
     </div>
 </body>
